@@ -1,6 +1,11 @@
 - disabled support for "none" alg tokens introduced with 1.5.2 by default.
   If you want to enable it, you will now have to explicitly set the accept_none_alg
   option to true.
+- id tokens using a signature algorithm not announced by the discovery
+  endpoint are now rejected.
+- you can now specify which signing algorithm you expect a bearer token to
+  use in order to avoid being tricked into accepting a rogue token signed
+  with a symmetric key when expecting an asymmetric cypher.
 
 04/19/2018
 - added support for passing bearer token as cookie
